# OpenCVImageStitching

./: .gitignore  cmake_gcc_build_run.bat  cmake_vs_build_run.bat
cmake/: FindOpenCV.cmake  macros.cmake
source/: CMakeLists.txt  Camera.h  GLDebugRenderer.h  GLRenderer.cpp  GLRenderer.h  GLShader.h  GLShaderManager.h  ImageStitching.cpp  ImageStitching.h  common.h  main.cpp
source/GLSL/: screen_quad.fp  screen_quad.vp
source/Utils/: CMakeLists.txt  ConsoleBuffer.cpp  SafeCRT.cpp
